Fixed alignment issues on pictures

--- a/style.css
+++ b/style.css
@@ -67,7 +67,8 @@ background-position: bottom;
   color: #E57373;
   background-color: #FFB74D;
   max-width: 25%;
-  max-height: 10%;
+	padding-right: 30px;
+	height: auto;
   border: 1px solid white;
   border-radius: 15px;
 }
@@ -123,7 +124,7 @@ background-position: bottom;
 	column-count: 2;
   column-gap: 0.2em;
   margin-bottom: 2px;
-	max-height: 40%;
+	height: auto;
 }
 
 #aboutUsTwo {
@@ -134,6 +135,7 @@ background-position: bottom;
   column-gap: 0.2em;
   margin-top: 1%;
 	padding-left: 10%;
+	height: auto;
  }
 
 #aboutUsThree {
@@ -144,7 +146,7 @@ background-position: bottom;
  	column-count: 2;
  	column-gap: 0.2em;
  	margin-top: 1%;
- 	max-height: 27.5%;
+	height: auto;
  }
 
 #aboutUsFour {
@@ -156,7 +158,7 @@ background-position: bottom;
 	margin-top: 1%;
 	padding-top: 5%;
 	padding-left: 10%;
-	max-height: 50%;
+	height: auto;
 }
 
 .mission{
